<resources>
    <string name="app_name">Learn Android App</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!-- Menu Labels -->
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_web_view">WebView(with html assets)</string>
    <string name="menu_dialogs">Various Dialogs</string>

    <!-- Various Dialogs -->
    <string name="button_edit_text_in_dialog">EditText in Dialog</string>

</resources>