<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.learnandroidapp.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.example.learnandroidapp.ui.gallery.GalleryFragment"
        android:label="@string/menu_gallery"
        tools:layout="@layout/fragment_gallery" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.example.learnandroidapp.ui.slideshow.SlideshowFragment"
        android:label="@string/menu_slideshow"
        tools:layout="@layout/fragment_slideshow" />

    <fragment
        android:id="@+id/nav_web_view"
        android:name="com.example.learnandroidapp.ui.web_view.WebViewWithHtmlAssetsFragment"
        android:label="@string/menu_web_view"
        tools:layout="@layout/fragment_web_view_with_html_assets" />

    <fragment
        android:id="@+id/nav_various_dialogs"
        android:name="com.example.learnandroidapp.ui.dialog.VariousDialogsFragment"
        android:label="@string/menu_dialogs"
        tools:layout="@layout/fragment_various_dialogs" />
</navigation>